--- a/templates/linkkf_request.html
+++ b/templates/linkkf_request.html
@@ -56,8 +56,15 @@ function make_program(data) {
   tmp += m_button('check_download_btn', '선택 다운로드 추가', []);
   tmp += m_button('all_check_on_btn', '전체 선택', []);
   tmp += m_button('all_check_off_btn', '전체 해제', []);
+  tmp += '&nbsp;&nbsp;&nbsp;&nbsp;<input id="new_title" name="new_title" class="form-control form-control-sm" value="'+data.title+'">'
   tmp += '</div>'
+  tmp += '<div class="form-inline">'
+  tmp += m_button('apply_new_title_btn', '저장폴더명 변경', []);
+  tmp += '&nbsp;&nbsp;&nbsp;&nbsp;<input id="new_season" name="new_season" class="form-control form-control-sm" value="'+data.season+'">'
+  tmp += m_button('apply_new_season_btn', '시즌 변경 (숫자만 가능)', []);
   tmp += m_button('search_tvdb_btn', 'TVDB', []);
+  tmp += m_button('add_whitelist', '스케쥴링 추가', []);
+  tmp += '</div>'
   tmp = m_button_group(tmp)
   str += tmp
   // program
@@ -129,6 +136,28 @@ $("body").on('click', '#search_tvdb_btn', function(e){
   window.open(url, "_blank");
 });
 
+$("body").on('click', '#add_whitelist', function(e){
+  e.preventDefault();
+  $.ajax({
+    url: '/' + package_name + '/ajax/add_whitelist',
+    type: "POST",
+    cache: false,
+    dataType: "json",
+    success: function (ret) {
+      if (ret.ret) {
+        $.notify('<strong>추가하였습니다.</strong><br>', {
+          type: 'success'
+        });
+        make_program(ret)
+      } else {
+        $.notify('<strong>추가 실패</strong><br>' + ret.log, {
+          type: 'warning'
+        });
+      }
+    }
+  });
+});
+
 $("body").on('click', '#apply_new_title_btn', function(e){
   e.preventDefault();
   new_title = document.getElementById("new_title").value
@@ -151,6 +180,36 @@ $("body").on('click', '#apply_new_title_btn', function(e){
       }
     }
   });
+});
+
+$("body").on('click', '#apply_new_season_btn', function(e){
+  e.preventDefault();
+  new_season = document.getElementById("new_season").value
+  if($.isNumeric(new_season) == false) {
+    $.notify('<strong>시즌은 숫자여야 합니다.</strong><br>' + ret.log, {
+        type: 'warning'
+      });
+  } else {
+    $.ajax({
+      url: '/' + package_name + '/ajax/apply_new_season',
+      type: "POST",
+      cache: false,
+      data: {new_season:new_season},
+      dataType: "json",
+      success: function (ret) {
+        if (ret.ret) {
+          $.notify('<strong>적용하였습니다.</strong><br>', {
+            type: 'success'
+          });
+          make_program(ret)
+        } else {
+          $.notify('<strong>적용 실패</strong><br>' + ret.log, {
+            type: 'warning'
+          });
+        }
+      }
+    });
+  }
 });
 
 // 하나씩 다운로드 추가
