--- a/templates/linkkf-yommi_request.html
+++ b/templates/linkkf-yommi_request.html
@@ -11,7 +11,7 @@
 </div> <!--전체-->
 
 <script type="text/javascript">
-var package_name = 'linkkf';
+var package_name = 'linkkf-yommi';
 var linkkf_url = "{{arg['linkkf_url']}}";
 var current_data = " data "
 
