--- a/templates/linkkf-yommi_setting.html
+++ b/templates/linkkf-yommi_setting.html
@@ -18,7 +18,7 @@
 
 
 <script type="text/javascript">
-var package_name = 'linkkf';
+var package_name = 'linkkf-yommi';
 
 $(document).ready(function(){
   use_collapse('include_date');
