코드 정리중.. 2

--- a/templates/linkkf-yommi_request.html
+++ b/templates/linkkf-yommi_request.html
@@ -3,7 +3,7 @@
 
 <div>
   <form id='program_list'>
-  {{ macros.setting_input_text_and_buttons('code', '작품 Code', [['analysis_btn', '분석'], ['go_linkkf_btn', 'Go Linkkf']], desc='URL /[코드].html 형식에서 코드부분 숫자(예> 22005 원피스') }}
+  {{ macros.setting_input_text_and_buttons('code', '작품 Code', [['analysis_btn', '분석'], ['go_linkkf_btn', 'Go Linkkf']], desc='URL /[코드].html 형식에서 코드부분 숫자 (예> 22005 원피스)') }}
   </form>
   <form id="program_auto_form">
   <div id='episode_list'></div>
