--- a/templates/linkkf-yommi_request.html
+++ b/templates/linkkf-yommi_request.html
@@ -160,9 +160,9 @@ $("body").on('click', '#add_whitelist', function(e){
 
 $("body").on('click', '#apply_new_title_btn', function(e){
   e.preventDefault();
-  let new_title = document.getElementById("new_title").value
+  new_title = document.getElementById("new_title").value
   $.ajax({
-    url: '/' + package_name + '/ajax/',
+    url: '/' + package_name + '/ajax/apply_new_title',
     type: "POST",
     cache: false,
     data: {new_title:new_title},
