--- a/templates/linkkf-yommi_request.html
+++ b/templates/linkkf-yommi_request.html
@@ -224,15 +224,15 @@ $("body").on('click', '#add_queue_btn', function(e){
     data: {code:code},
     dataType: "json",
     success: function (data) {
-      if (data.ret == 'success') {
+      if (data.ret === 'success') {
         $.notify('<strong>다운로드 작업을 추가 하였습니다.</strong>', {
           type: 'success'
         });
-      } else if (data.ret == 'fail') {
+      } else if (data.ret === 'fail') {
         $.notify('<strong>이미 큐에 있습니다. 삭제 후 추가하세요.</strong>', {
           type: 'warning'
         });
-      } else if (data.ret == 'no_data') {
+      } else if (data.ret === 'no_data') {
         $.notify('<strong>잘못된 코드입니다.</strong>', {
           type: 'warning'
         });
