--- a/templates/linkkf-yommi_setting.html
+++ b/templates/linkkf-yommi_setting.html
@@ -21,22 +21,37 @@
       {{ macros.setting_input_int('max_ffmpeg_process_count', '동시 다운로드 수', value=arg['max_ffmpeg_process_count'], desc='동시에 다운로드 할 에피소드 갯수입니다.') }}
 {#      {{ macros.setting_global_scheduler_sub_button(arg['scheduler'], arg['is_running']) }}#}
         {{ macros.setting_global_scheduler_button(arg['scheduler'], arg['is_running']) }}
-      {{ macros.setting_input_int('auto_interval', '스케쥴링 실행 주기', value=arg['auto_interval'], min='1', placeholder='10', desc='minute 단위') }}
+{#      {{ macros.setting_input_int('auto_interval', '스케쥴링 실행 주기', value=arg['auto_interval'], min='1', placeholder='10', desc='minute 단위') }}#}
+        {{ macros.setting_input_text('auto_interval', '스케쥴링 실행 주기', value=arg['auto_interval'], col='3', placeholder='10', desc=['Inverval(minute 단위)이나 Cron 설정']) }}
       {{ macros.setting_checkbox('auto_start', '시작시 자동실행', value=arg['auto_start'], desc='On : 시작시 자동으로 스케쥴러에 등록됩니다.') }}
       {{ macros.setting_input_textarea('whitelist_program', '자동 다운로드 codes', value=arg['whitelist_program'], desc=['이 곳에 있는 code들을 스케쥴러 일정마다 자동으로 다운로드합니다.', ', 또는 Enter로 구분']) }}
       <!-- <div id="linkkf_auto_make_folder_div" class="collapse"> -->
         {{ macros.setting_input_text('linkkf_finished_insert', '완결 표시', col='3', value=arg['linkkf_finished_insert'], desc=['완결된 컨텐츠 폴더명 앞에 넣을 문구입니다.']) }}
         {{ macros.setting_checkbox('linkkf_auto_make_season_folder', '시즌 폴더 생성', value=arg['linkkf_auto_make_season_folder'], desc=['On : Season 번호 폴더를 만듭니다.']) }}
      <!-- </div> -->
-     {{ macros.m_tab_content_end() }}
-    <!-- {{ macros.setting_button([['global_setting_save_btn', '저장save']]) }} -->
+    {{ macros.m_tab_content_end() }}
+    {{ macros.m_tab_content_start('auto', false) }}
+        {{ macros.setting_global_scheduler_sub_button(arg['scheduler'], arg['is_running']) }}
+        {{ macros.setting_input_text('ani365_interval', '스케쥴링 실행 정보', value=arg['ani365_interval'], col='3', desc=['Inverval(minute 단위)이나 Cron 설정']) }}
+        {{ macros.setting_checkbox('ani365_auto_start', '시작시 자동실행', value=arg['ani365_auto_start'], desc='On : 시작시 자동으로 스케쥴러에 등록됩니다.') }}
+        {{ macros.setting_input_textarea('ani365_auto_code_list', '자동 다운로드할 작품 코드', desc=['all 입력시 모두 받기', '구분자 | 또는 엔터'], value=arg['ani365_auto_code_list'], row='10') }}
+        {{ macros.setting_checkbox('ani365_auto_mode_all', '에피소드 모두 받기', value=arg['ani365_auto_mode_all'], desc=['On : 이전 에피소드를 모두 받습니다.', 'Off : 최신 에피소드만 받습니다.']) }}
+    {{ macros.m_tab_content_end() }}
+        {{ macros.m_tab_content_start('action', false) }}
+    {{ macros.setting_button([['global_one_execute_sub_btn', '1회 실행']], left='1회 실행' ) }}
+    {{ macros.setting_button([['global_reset_db_sub_btn', 'DB 초기화']], left='DB정리' ) }}
+  {{ macros.m_tab_content_end() }}
+    <!-- {{ macros.setting_button([['global_setting_save_btn', '설정 저장']]) }} -->
     </div>  
   </form>
 </div> <!--전체-->
 
 
 <script type="text/javascript">
-var package_name = 'linkkf-yommi';
+{#    {{ arg }}#}
+const package_name = "{{ arg['package_name'] }}";
+const sub = "{{ arg['sub'] }}";
+const current_data = null;
 
 $(document).ready(function(){
   use_collapse('include_date');
@@ -57,6 +72,10 @@ $("body").on('click', '#go_btn', function(e){
   url = document.getElementById("linkkf_url").value
   window.open(url, "_blank");
 });
+
+$('#auto_interval').change( function () {
+    console.log('change interval');
+})
 
 </script>    
 {% endblock %}
