--- a/templates/linkkf-yommi_list.html
+++ b/templates/linkkf-yommi_list.html
@@ -1,77 +1,104 @@
 {% extends "base.html" %}
 {% block content %}
-    <div>
-        미구현
-    </div>
-{#<div>#}
-{#  <form id="form_search" class="form-inline" style="text-align:left">#}
-{#    <div class="container-fluid">#}
-{#      <div class="row show-grid">#}
-{#        <span class="col-md-4">#}
-{#          <select id="order" name="order" class="form-control form-control-sm">#}
-{#            <option value="desc">최근순</option>#}
-{#            <option value="asc">오래된순</option>#}
-{#          </select>#}
-{#          <select id="option" name="option" class="form-control form-control-sm">#}
-{#            <option value="all">전체</option>#}
-{#            <option value="completed">완료</option>#}
-{#          </select>#}
-{#        </span>#}
-{#        <span class="col-md-8">#}
-{#          <input id="search_word" name="search_word" class="form-control form-control-sm w-75" type="text" placeholder="" aria-label="Search">#}
-{#          <button id="search" class="btn btn-sm btn-outline-success">검색</button>#}
-{#          <button id="reset_btn" class="btn btn-sm btn-outline-success">리셋</button>#}
-{#        </span>#}
-{#      </div>#}
+{#    <div>#}
+{#        미구현#}
 {#    </div>#}
-{#  </form>#}
-{#  <div id='page1'></div>#}
-{#  {{ macros.m_hr_head_top() }}#}
-{#  {{ macros.m_row_start('0') }}#}
-{#  {{ macros.m_col(2,  macros.m_strong('Poster')) }}#}
-{#  {{ macros.m_col(10,  macros.m_strong('Info')) }}#}
-{#  {{ macros.m_row_end() }}#}
-{#  {{ macros.m_hr_head_bottom() }}#}
-{#  <div id="list_div"></div>#}
-{#  <div id='page2'></div>#}
-{#</div>#}
-{#<script type="text/javascript">#}
-{#const package_name = "{{arg['package_name']}}";#}
+<div>
+  <form id="form_search" class="form-inline" style="text-align:left">
+    <div class="container-fluid">
+      <div class="row show-grid">
+        <span class="col-md-4">
+          <select id="order" name="order" class="form-control form-control-sm">
+            <option value="desc">최근순</option>
+            <option value="asc">오래된순</option>
+          </select>
+          <select id="option" name="option" class="form-control form-control-sm">
+            <option value="all">전체</option>
+            <option value="completed">완료</option>
+          </select>
+        </span>
+        <span class="col-md-8">
+          <input id="search_word" name="search_word" class="form-control form-control-sm w-75" type="text" placeholder="" aria-label="Search">
+          <button id="search" class="btn btn-sm btn-outline-success">검색</button>
+          <button id="reset_btn" class="btn btn-sm btn-outline-success">리셋</button>
+        </span>
+      </div>
+    </div>
+  </form>
+  <div id='page1'></div>
+  {{ macros.m_hr_head_top() }}
+  {{ macros.m_row_start('0') }}
+  {{ macros.m_col(2,  macros.m_strong('Poster')) }}
+  {{ macros.m_col(10,  macros.m_strong('Info')) }}
+  {{ macros.m_row_end() }}
+  {{ macros.m_hr_head_bottom() }}
+  <div id="list_div"></div>
+  <div id='page2'></div>
+</div>
+<script type="text/javascript">
+const package_name = "{{arg['package_name']}}";
 {#const sub = "{{arg['sub']}}";#}
 {#const sub = "list";#}
-{#const sub = ""#}
-{#const current_data = null;#}
-{##}
-{#const get_list = () => {#}
-{#    $.ajax({#}
-{#        url: '/' + package_name + '/ajax' + sub + '/web_list',#}
-{#        type: "POST",#}
-{#        cache: false,#}
-{#        dataType: 'json',#}
-{#        success: (ret) => {#}
-{#                  if (ret.ret === 'success' && ret.data != null) {#}
-        {#make_program(ret.data)#}
-{#                      console.log(ret.data)#}
-{#      } else {#}
-{#        $.notify('<strong>분석 실패</strong><br>' + ret.log, {type: 'warning'});#}
-{#      }#}
-{##}
-{#        }#}
-{#    });#}
-{##}
-{#}#}
-{##}
-{#$(document).ready(function(){#}
+const sub = ""
+const current_data = null;
+
+const get_list = () => {
+    $.ajax({
+        {#url: '/' + package_name + '/ajax' + sub + '/web_list',#}
+        url: '/' + package_name + '/ajax/web_list',
+        type: "POST",
+        cache: false,
+        dataType: 'json',
+        success: (data) => {
+            if (data) {
+                make_list(data.list)
+                {#console.log(data)#}
+                {#console.log(ret.data)#}
+            } else {
+                $.notify('<strong>분석 실패</strong><br>' + ret.log, {type: 'warning'});
+            }
+        }
+    });
+
+}
+
+$(document).ready(function(){
   {#global_sub_request_search('1');#}
-{#    get_list()#}
-{#});#}
-{##}
-{#$("body").on('click', '#page', function(e){#}
-{#  e.preventDefault();#}
-{#  global_sub_request_search($(this).data('page'));#}
-{#});#}
-{##}
-{##}
-{##}
-{#</script>#}
+    get_list()
+});
+
+$("body").on('click', '#page', function(e){
+  e.preventDefault();
+  global_sub_request_search($(this).data('page'));
+});
+
+
+function make_list(data) {
+  //console.log(data)
+  str = '';
+  for (let i in data) {
+    console.log(data[i])
+    str += m_row_start();
+    str += m_col(1, data[i].id);
+    tmp = (data[i].status == 'completed') ? '완료' : '미완료';
+    str += m_col(1, tmp);
+    tmp = data[i].created_time + '(추가)';
+    if (data[i].completed_time != null)
+      tmp += data[i].completed_time + '(완료)';
+    str += m_col(3, tmp)
+    tmp = data[i].savepath + '<br>' + data[i].filename + '<br><br>';
+    tmp2 = m_button('json_btn', 'JSON', [{'key':'id', 'value':data[i].id}]);
+    tmp2 += m_button('request_btn', '작품 검색', [{'key':'content_code', 'value':data[i].content_code}]);
+    tmp2 += m_button('self_search_btn', '목록 검색', [{'key':'title', 'value':data[i].title}]);
+    tmp2 += m_button('remove_btn', '삭제', [{'key':'id', 'value':data[i].id}]);
+    tmp += m_button_group(tmp2)
+    str += m_col(7, tmp)
+    str += m_row_end();
+    if (i != data.length -1) str += m_hr();
+  }
+  document.getElementById("list_div").innerHTML = str;
+}
+
+
+</script>
 {% endblock %}
