linkkf-yommi 기능 추가및 버그 픽스 4. 검색 버그 수정 lazyload 동작 수정

--- a/templates/linkkf-yommi_category.html
+++ b/templates/linkkf-yommi_category.html
@@ -342,6 +342,10 @@
     } else {
       document.getElementById("screen_movie_list").innerHTML = str;
     }
+    $("img.lazyload").lazyload({
+      threshold : 10,
+      effect : "fadeIn",
+    });
   }
 
   const spinner = document.getElementById("spinner");
