--- a/templates/linkkf-yommi_list.html
+++ b/templates/linkkf-yommi_list.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
-{#    <div>#}
-{#        미구현#}
-{#    </div>#}
+<!--{#    <div>#}-->
+<!--{#        미구현#}-->
+<!--{#    </div>#}-->
 <div>
   <form id="form_search" class="form-inline" style="text-align:left">
     <div class="container-fluid">
@@ -37,14 +37,13 @@
 </div>
 <script type="text/javascript">
 const package_name = "{{arg['package_name']}}";
-{#const sub = "{{arg['sub']}}";#}
-{#const sub = "list";#}
+// {#const sub = "{{arg['sub']}}";#}
+// {#const sub = "list";#}
 const sub = ""
-const current_data = null;
+let current_data = null;
 
 const get_list = () => {
     $.ajax({
-        {#url: '/' + package_name + '/ajax' + sub + '/web_list',#}
         url: '/' + package_name + '/ajax/web_list',
         type: "POST",
         cache: false,
@@ -52,51 +51,102 @@ const get_list = () => {
         success: (data) => {
             if (data) {
                 make_list(data.list)
-                {#console.log(data)#}
-                {#console.log(ret.data)#}
+                // {#console.log(data)#}
+                // {#console.log(ret.data)#}
             } else {
                 $.notify('<strong>분석 실패</strong><br>' + ret.log, {type: 'warning'});
             }
         }
     });
-
 }
 
+function sub_request_search(page, move_top=true) {
+  let formData = get_formdata('#form_search')
+  // console.log(formData)
+  formData += '&page=' + page;
+  $.ajax({
+    url: '/' + package_name + '/ajax/web_list',
+    type: "POST",
+    cache: false,
+    data: formData,
+    dataType: "json",
+    success: function (data) {
+      current_data = data;
+      if (move_top)
+        window.scrollTo(0,0);
+      make_list(data.list)
+      make_page_html(data.paging)
+    }
+  });
+}
+
+$("body").on('click', '#remove_btn', function(e) {
+  e.preventDefault();
+  let id = $(this).data('id');
+  $.ajax({
+    url: '/'+package_name+'/ajax/db_remove',
+    type: "POST",
+    cache: false,
+    data: {id:id},
+    dataType: "json",
+    success: function (data) {
+      if (data) {
+        $.notify('<strong>삭제되었습니다.</strong>', {
+          type: 'success'
+        });
+        sub_request_search(current_data.paging.current_page, false)
+        // get_list()
+      } else {
+        $.notify('<strong>삭제 실패</strong>', {
+          type: 'warning'
+        });
+      }
+    }
+  });
+});
+
 $(document).ready(function(){
-  {#global_sub_request_search('1');#}
+  // {#global_sub_request_search('1');#}
     get_list()
 });
 
 $("body").on('click', '#page', function(e){
   e.preventDefault();
-  global_sub_request_search($(this).data('page'));
+  sub_request_search($(this).data('page'));
 });
 
 
 function make_list(data) {
   //console.log(data)
-  str = '';
-  for (let i in data) {
-    console.log(data[i])
-    str += m_row_start();
-    str += m_col(1, data[i].id);
-    tmp = (data[i].status == 'completed') ? '완료' : '미완료';
-    str += m_col(1, tmp);
-    tmp = data[i].created_time + '(추가)';
-    if (data[i].completed_time != null)
-      tmp += data[i].completed_time + '(완료)';
-    str += m_col(3, tmp)
-    tmp = data[i].savepath + '<br>' + data[i].filename + '<br><br>';
-    tmp2 = m_button('json_btn', 'JSON', [{'key':'id', 'value':data[i].id}]);
-    tmp2 += m_button('request_btn', '작품 검색', [{'key':'content_code', 'value':data[i].content_code}]);
-    tmp2 += m_button('self_search_btn', '목록 검색', [{'key':'title', 'value':data[i].title}]);
-    tmp2 += m_button('remove_btn', '삭제', [{'key':'id', 'value':data[i].id}]);
-    tmp += m_button_group(tmp2)
-    str += m_col(7, tmp)
-    str += m_row_end();
-    if (i != data.length -1) str += m_hr();
+  let tmp, tmp2 = '';
+  // console.log(data)
+  if (data.length > 0) {
+    let str = ''
+    for (let i in data) {
+      console.log(data[i])
+      str += m_row_start();
+      str += m_col(1, data[i].id);
+      tmp = (data[i].status == 'completed') ? '완료' : '미완료';
+      str += m_col(1, tmp);
+      tmp = data[i].created_time + '(추가)<br/>';
+      if (data[i].completed_time != null)
+        tmp += data[i].completed_time + '(완료)';
+      str += m_col(3, tmp)
+      tmp = data[i].contents_json.save_folder + '<br />' + data[i].contents_json.filename + '<br /><br />';
+      tmp2 = m_button('json_btn', 'JSON', [{'key': 'id', 'value': data[i].id}]);
+      tmp2 += m_button('request_btn', '작품 검색', [{'key': 'content_code', 'value': data[i].content_code}]);
+      tmp2 += m_button('self_search_btn', '목록 검색', [{'key': 'title', 'value': data[i].title}]);
+      tmp2 += m_button('remove_btn', '삭제', [{'key': 'id', 'value': data[i].id}]);
+      tmp += m_button_group(tmp2)
+      str += m_col(7, tmp)
+      str += m_row_end();
+      if (i != data.length - 1) str += m_hr();
+    }
+    document.getElementById("list_div").innerHTML = str;
+  } else {
+    console.log('목록없슴')
+    return false;
   }
-  document.getElementById("list_div").innerHTML = str;
 }
 
 
