--- a/templates/linkkf-yommi_request.html
+++ b/templates/linkkf-yommi_request.html
@@ -124,12 +124,17 @@
       data: {code:code},
       dataType: "json",
       success: function (ret) {
-        if (ret.ret) {
-          make_program(ret)
+        // if (ret.ret) {
+        //   make_program(ret)
+        // } else {
+        //   $.notify('<strong>분석 실패</strong><br>' + ret.log, {
+        //     type: 'warning'
+        //   });
+        // }
+        if (ret.ret == 'success' && ret.data != null) {
+          make_program(ret.data)
         } else {
-          $.notify('<strong>분석 실패</strong><br>' + ret.log, {
-            type: 'warning'
-          });
+          $.notify('<strong>분석 실패</strong><br>' + ret.log, {type: 'warning'});
         }
       }
     });
@@ -147,22 +152,22 @@
       tmp = '<div id="exModal" class="form-inline" role="dialog" aria-hidden="true">';
       tmp += '</div>'
       str += m_hr_black();
-      {#str += m_row_start(0);#}
-      {##}
-      {#str += m_row_end();#}
-      {#str += m_hr_black();#}
+      // {#str += m_row_start(0);#}
+      // {##}
+      // {#str += m_row_end();#}
+      // {#str += m_hr_black();#}
       str += '<div id="inner_airing" class="d-flex align-content-between flex-wrapd-flex align-content-between flex-wrap">';
       for (i in data.episode) {
-          {#str += m_row_start();#}
-          {#tmp = '<div class="col-sm"><strong>' + data.episode[i].title+ '</strong>';#}
-
-          {#tmp += '<br />'#}
-          {#tmp += '' + data.episode[i].code + '</div>';#}
-          {#str += m_col(12, tmp)#}
+          // {#str += m_row_start();#}
+          // {#tmp = '<div class="col-sm"><strong>' + data.episode[i].title+ '</strong>';#}
+          //
+          // {#tmp += '<br />'#}
+          // {#tmp += '' + data.episode[i].code + '</div>';#}
+          // {#str += m_col(12, tmp)#}
           tmp = '<div class="mx-1 mb-1"><button id="code_button" data-code="' + data.episode[i].code + '" type="button" class="btn btn-primary code-button bootstrap-tooltip" data-toggle="button" data-tooltip="true" aria-pressed="true" autocomplete="off" data-placement="top">' +
               '<span data-tooltip-text="'+data.episode[i].title+'">' + data.episode[i].code + '</span></button></div>';
-          {#if (i === 10) {#}
-          {#    tmp += '<div class="w-100"></div>'#}
+          // {#if (i === 10) {#}
+          // {#    tmp += '<div class="w-100"></div>'#}
           str += tmp
 
       }
@@ -174,6 +179,8 @@
   }
 
       function make_program(data) {
+          current_data = data;
+          console.log('current_data:: ', data)
           str = '';
           tmp = '<div class="form-inline">'
           tmp += m_button('check_download_btn', '선택 다운로드 추가', []);
@@ -230,7 +237,8 @@
 
               tmp += '<div class="form-inline">'
               tmp += '<input id="checkbox_' + data.episode[i].code + '" name="checkbox_' + data.episode[i].code + '" type="checkbox" checked data-toggle="toggle" data-on="선 택" data-off="-" data-onstyle="success" data-offstyle="danger" data-size="small">&nbsp;&nbsp;&nbsp;&nbsp;'
-              tmp += m_button('add_queue_btn', '다운로드 추가', [{'key': 'code', 'value': data.episode[i].code}])
+              // tmp += m_button('add_queue_btn', '다운로드 추가', [{'key': 'code', 'value': data.episode[i].code}])
+              tmp += m_button('add_queue_btn', '다운로드 추가', [{'key': 'idx', 'value': i}])
               tmp += '</div>'
               str += m_col(12, tmp)
               str += m_row_end();
@@ -338,24 +346,41 @@
   // 하나씩 다운로드 추가
       $("body").on('click', '#add_queue_btn', function (e) {
           e.preventDefault();
-          code = $(this).data('code');
+          // code = $(this).data('code');
+          code = current_data.episode[$(this).data('idx')].code
+          console.log('code:: ', code)
+          data = current_data.episode[$(this).data('idx')]
+          console.log('data:: ', data)
           $.ajax({
               url: '/' + package_name + '/ajax/add_queue',
               type: "POST",
               cache: false,
-              data: {code: code},
+              data: {code: code, data: JSON.stringify(data)},
               dataType: "json",
               success: function (data) {
-                  if (data.ret === 'success') {
-                      $.notify('<strong>다운로드 작업을 추가 하였습니다.</strong>', {
-                          type: 'success'
+                console.log('#add_queue_btn::data >>', data)
+                  if (data.ret === 'enqueue_db_append') {
+                    $.notify('<strong>다운로드 작업을 추가 하였습니다.</strong>', {
+                      type: 'success'
+                    });
+                  } else if (data.ret === 'enqueue_db_exist') {
+                       $.notify('<strong>DB에 존재하는 에피소드입니다.</strong>', {
+                          type: 'warning'
                       });
+                  } else if (data.ret === 'db_completed') {
+                    $.notify('<strong>DB에 완료 기록이 있습니다.</strong>', {
+                      type: 'warning'
+                    });
                   } else if (data.ret === 'fail') {
                       $.notify('<strong>이미 큐에 있습니다. 삭제 후 추가하세요.</strong>', {
                           type: 'warning'
                       });
                   } else if (data.ret === 'no_data') {
                       $.notify('<strong>잘못된 코드입니다.</strong>', {
+                          type: 'warning'
+                      });
+                  } else if (data.ret === 'Debugging') {
+                       $.notify('<strong>Debugging</strong>', {
                           type: 'warning'
                       });
                   } else {
@@ -405,7 +430,7 @@
       });
 
       $('#go_modal_airing').on('shown.bs.modal', function () {
-          {#get_airing_list()#}
+          // {#get_airing_list()#}
           $('#exModal').trigger('focus')
       })
 
