--- a/templates/linkkf-yommi_queue.html
+++ b/templates/linkkf-yommi_queue.html
@@ -11,9 +11,9 @@
   {{ macros.m_row_start('0') }}
   {{ macros.m_col(1,  macros.m_strong('Idx')) }}
   {{ macros.m_col(2,  macros.m_strong('CreatedTime')) }}
-  {{ macros.m_col(3,  macros.m_strong('Filename')) }}
-  {{ macros.m_col(3,  macros.m_strong('ProgramTitle')) }}
-  {{ macros.m_col(2,  macros.m_strong('Status')) }}
+  {{ macros.m_col(4,  macros.m_strong('Filename (Title)')) }}
+<!--  {{ macros.m_col(3,  macros.m_strong('ProgramTitle')) }}-->
+  {{ macros.m_col(3,  macros.m_strong('Status')) }}
   {{ macros.m_col(1,  macros.m_strong('Action')) }}
   {{ macros.m_row_end() }}
   {{ macros.m_hr_head_bottom() }}
@@ -22,12 +22,12 @@
 
 
 <script type="text/javascript">
-var package_name = 'linkkf-yommi';
-var current_data = null;
+const package_name = 'linkkf-yommi';
+let current_data = null;
 
 $(document).ready(function(){
-  var protocol = window.location.protocol;
-  socket = io.connect(protocol + "//" + document.domain + ":" + location.port + "/" + package_name);
+  const protocol = window.location.protocol;
+  const socket = io.connect(protocol + "//" + document.domain + ":" + location.port + "/" + package_name);
 
   socket.on('on_connect', function(data){
     if (data != null) {
@@ -49,10 +49,11 @@ function on_start(data) {
 }
 
 function on_status(data) {
-  tmp = document.getElementById("progress_"+data.plugin_id)
+  // console.log(data)
+  let tmp = document.getElementById("progress_"+data.plugin_id)
   if (tmp != null) {
     document.getElementById("progress_"+data.plugin_id).style.width = data.data.percent+ '%';
-    document.getElementById("progress_"+data.plugin_id+"_label").innerHTML = data.status + "(" + data.data.percent + "%)";
+    document.getElementById("progress_"+data.plugin_id+"_label").innerHTML = data.status + "(" + data.data.percent + "%)" + ' ' + ((data.data != null)?data.data.current_speed:'');
   }
 }
 
@@ -62,15 +63,16 @@ function make_download_list(data) {
     str += m_row_start();
     str += m_col(1, data[i].entity_id);
     str += m_col(2, data[i].created_time);
-    str += m_col(3, data[i].info.filename);
-    str += m_col(3, data[i].info.program_title);
+    tmp_filename = '<b>' + data[i].info.program_title + '</b><br />' + data[i].info.filename
+    str += m_col(4, tmp_filename);
+    // str += m_col(3, data[i].info.program_title);
 
     label = data[i].ffmpeg_status_kor
     if (data[i].ffmpeg_percent != 0) {
       label += '(' + data[i].ffmpeg_percent + '%)'
     }
     tmp = m_progress('progress_'+data[i].entity_id, data[i].ffmpeg_percent,  label)
-    str += m_col(2, tmp);
+    str += m_col(3, tmp);
 
     tmp = m_button('program_cancel_btn', '취소', [{'key':'id', 'value':data[i].entity_id}]);
     tmp = m_button_group(tmp)
