--- a/templates/linkkf-yommi_list.html
+++ b/templates/linkkf-yommi_list.html
@@ -151,4 +151,11 @@ function make_list(data) {
 
 
 </script>
+<style>
+  @media (min-width: 576px) {
+    .container {
+      max-width: 98%;
+    }
+  }
+</style>
 {% endblock %}
