--- a/templates/linkkf-yommi_queue.html
+++ b/templates/linkkf-yommi_queue.html
@@ -127,5 +127,12 @@ $("body").on('click', '#go_ffmpeg_btn', function(e){
   $(location).attr('href', '/ffmpeg')
 });
 
-</script>    
+</script>
+<style>
+  @media (min-width: 576px) {
+    .container {
+      max-width: 98%;
+    }
+  }
+</style>
 {% endblock %}
