--- a/templates/linkkf-yommi_list.html
+++ b/templates/linkkf-yommi_list.html
@@ -49,13 +49,14 @@ const get_list = () => {
         cache: false,
         dataType: 'json',
         success: (data) => {
-            if (data) {
-                make_list(data.list)
-                // {#console.log(data)#}
-                // {#console.log(ret.data)#}
-            } else {
-                $.notify('<strong>분석 실패</strong><br>' + ret.log, {type: 'warning'});
-            }
+          current_data = data;
+          if (data) {
+              make_list(data.list)
+              // {#console.log(data)#}
+              // {#console.log(ret.data)#}
+          } else {
+              $.notify('<strong>분석 실패</strong><br>' + ret.log, {type: 'warning'});
+          }
         }
     });
 }
@@ -115,6 +116,22 @@ $("body").on('click', '#page', function(e){
   sub_request_search($(this).data('page'));
 });
 
+$("body").on('click', '#json_btn', function(e){
+  e.preventDefault();
+  var id = $(this).data('id');
+  for (i in current_data.list) {
+    if (current_data.list[i].id == id) {
+      m_modal(current_data.list[i])
+    }
+  }
+});
+
+$("body").on('click', '#request_btn', function(e){
+  e.preventDefault();
+  var content_code = $(this).data('content_code');
+  $(location).attr('href', '/' + package_name + '/request?code=' + content_code)
+});
+
 
 function make_list(data) {
   //console.log(data)
@@ -134,7 +151,7 @@ function make_list(data) {
       str += m_col(3, tmp)
       tmp = data[i].contents_json.save_folder + '<br />' + data[i].contents_json.filename + '<br /><br />';
       tmp2 = m_button('json_btn', 'JSON', [{'key': 'id', 'value': data[i].id}]);
-      tmp2 += m_button('request_btn', '작품 검색', [{'key': 'content_code', 'value': data[i].content_code}]);
+      tmp2 += m_button('request_btn', '작품 검색', [{'key': 'content_code', 'value': data[i].contents_json.program_code}]);
       tmp2 += m_button('self_search_btn', '목록 검색', [{'key': 'title', 'value': data[i].title}]);
       tmp2 += m_button('remove_btn', '삭제', [{'key': 'id', 'value': data[i].id}]);
       tmp += m_button_group(tmp2)
