--- a/templates/linkkf-yommi_request.html
+++ b/templates/linkkf-yommi_request.html
@@ -47,14 +47,18 @@
           cache: false,
           dataType: "json",
           success: (ret) => {
+            if (ret.ret == 'success' && ret.episode != null) {
               current_airing_data = ret
               total_page = ret.total_page
               console.log(ret)
               if (current_airing_data !== '') {
-                  make_airing_list(ret)
-                  div_visible = true
-                  console.log(div_visible)
+                make_airing_list(ret)
+                div_visible = true
+                console.log(div_visible)
               }
+            } else {
+              $.notify('<strong>분석 실패</strong><br>' + ret.log, {type: 'warning'});
+            }
           }
       })
 
@@ -114,6 +118,7 @@
     console.log('#analysis_btn >>> code::', code)
     if (document.getElementById("code").value === '') {
         console.log('code 값을 입력해주세요.')
+        $.notify('<strong>code 값을 입력해주세요.</strong><br>')
         return
     }
 
@@ -124,6 +129,7 @@
       data: {code:code},
       dataType: "json",
       success: function (ret) {
+        console.log('ret:ret %s', ret.ret)
         // if (ret.ret) {
         //   make_program(ret)
         // } else {
