--- a/templates/linkkf-yommi_category.html
+++ b/templates/linkkf-yommi_category.html
@@ -34,14 +34,19 @@
   <form id="screen_movie_list_form">
     <div id="screen_movie_list" class="container"></div>
   </form>
-  <div class="text-center">
-    <div id="spinner" class="spinner-border" role="status">
-      <span class="sr-only">Loading...</span>
-    </div>
-  </div>
+<!--  <div class="text-center">-->
+<!--    <div id="spinner" class="spinner-border" role="status">-->
+<!--      <span class="sr-only">Loading...</span>-->
+<!--    </div>-->
+<!--  </div>-->
+
   <form id="program_auto_form">
     <div id="episode_list"></div>
   </form>
+  <div class="spinner" id="spinner" style="display: none;">
+      <div class="double-bounce1"></div>
+      <div class="double-bounce2"></div>
+  </div>
 </div>
 <!--전체-->
 
@@ -63,7 +68,7 @@
 
   $("#anime_category #ing").on("click", function () {
     let spinner = document.getElementById("spinner");
-    spinner.style.visibility = "visible";
+    spinner.style.display = "block";
     current_cate = "ing"
     get_anime_list(1, "ing");
   });
@@ -191,7 +196,7 @@
         if (current_screen_movie_data !== "") {
           make_screen_movie_list(ret, page);
           $("img.lazyload").lazyload({
-            threshold : 10,
+            threshold : 100,
             effect : "fadeIn",
           });
           div_visible = true;
@@ -218,7 +223,7 @@
         if (current_screen_movie_data !== "") {
           make_screen_movie_list(ret, page);
           $("img.lazyload").lazyload({
-            threshold : 10,
+            threshold : 100,
             effect : "fadeIn",
           });
           div_visible = true;
@@ -302,7 +307,7 @@
 
     document.getElementById("airing_list").innerHTML = str;
     $("img.lazyload").lazyload({
-      threshold : 200,
+      threshold : 100,
       effect : "fadeIn",
     });
   }
@@ -357,7 +362,7 @@
       document.getElementById("screen_movie_list").innerHTML = str;
     }
     $("img.lazyload").lazyload({
-      threshold : 10,
+      threshold : 100,
       effect : "fadeIn",
     });
   }
@@ -388,12 +393,13 @@
         break;
     }
 
-    console.log('fetch_url::>', url)
+    // console.log('fetch_url::>', url)
     console.log('cate::>', cate)
     console.log('current_cate::>', current_cate)
 
     if (page > total_page ) {
       console.log('전체 페이지 초과')
+      document.getElementById("spinner").style.display = 'none'
       return false;
     }
 
@@ -406,13 +412,14 @@
       body: new URLSearchParams(data),
     })
       .then((res) => {
+        document.getElementById("spinner").style.display = 'block'
         return res.json()
       })
       .then((response) => {
         console.log("return page:::> ", response.page);
         make_screen_movie_list(response, response.page);
         $("img.lazyload").lazyload({
-          threshold : 10,
+          threshold : 100,
           effect : "fadeIn",
         });
         page++;
@@ -422,17 +429,20 @@
   };
 
   const onScroll = (e) => {
+    threshold = 50
     console.dir(e.target.scrollingElement.scrollHeight);
     const { scrollTop, scrollHeight, clientHeight } = e.target.scrollingElement;
-    if (Math.round(scrollHeight - scrollTop) <= clientHeight) {
+    // if (Math.round(clientHeight + scrollTop) >= scrollHeight + threshold) {
+    if(clientHeight + scrollTop + threshold >= scrollHeight) {
       document.getElementById("spinner").style.display = "block";
+      // setTimeout()
       console.log("loading");
       console.log(current_cate)
       // console.log("now page::> ", page);
       // console.log("next_page::> ", next_page);
-      loadNextAnimes(current_cate, next_page);
+      setTimeout(loadNextAnimes(current_cate, next_page), 1500);
       $("img.lazyload").lazyload({
-        threshold : 10,
+        threshold : 100,
         effect : "fadeIn",
       });
     }
@@ -841,5 +851,75 @@
   #screen_movie_list {
     margin-top: 10px;
   }
+/*  .spinner {*/
+/*  width: 40px;*/
+/*  height: 40px;*/
+/*  background-color: #333;*/
+
+/*  margin: 100px auto;*/
+/*  -webkit-animation: sk-rotateplane 1.2s infinite ease-in-out;*/
+/*  animation: sk-rotateplane 1.2s infinite ease-in-out;*/
+/*}*/
+
+/*@-webkit-keyframes sk-rotateplane {*/
+/*  0% { -webkit-transform: perspective(120px) }*/
+/*  50% { -webkit-transform: perspective(120px) rotateY(180deg) }*/
+/*  100% { -webkit-transform: perspective(120px) rotateY(180deg)  rotateX(180deg) }*/
+/*}*/
+
+/*@keyframes sk-rotateplane {*/
+/*  0% {*/
+/*    transform: perspective(120px) rotateX(0deg) rotateY(0deg);*/
+/*    -webkit-transform: perspective(120px) rotateX(0deg) rotateY(0deg)*/
+/*  } 50% {*/
+/*    transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg);*/
+/*    -webkit-transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg)*/
+/*  } 100% {*/
+/*    transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);*/
+/*    -webkit-transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);*/
+/*  }*/
+
+/*}*/
+ .spinner {
+  width: 40px;
+  height: 40px;
+
+  position: relative;
+  margin: 100px auto;
+}
+
+.double-bounce1, .double-bounce2 {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: #333;
+  opacity: 0.6;
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  -webkit-animation: sk-bounce 2.0s infinite ease-in-out;
+  animation: sk-bounce 2.0s infinite ease-in-out;
+}
+
+.double-bounce2 {
+  -webkit-animation-delay: -1.0s;
+  animation-delay: -1.0s;
+}
+
+@-webkit-keyframes sk-bounce {
+  0%, 100% { -webkit-transform: scale(0.0) }
+  50% { -webkit-transform: scale(1.0) }
+}
+
+@keyframes sk-bounce {
+  0%, 100% {
+    transform: scale(0.0);
+    -webkit-transform: scale(0.0);
+  } 50% {
+    transform: scale(1.0);
+    -webkit-transform: scale(1.0);
+  }
+}
 </style>
 {% endblock %}
